# Camera

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  config.env  flash_args  ldgen_libraries  project_description.json  sdkconfig  sdkconfig.defaults  sdkconfig.old
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
components/ES7210/: CMakeLists.txt  myES7210.c  myES7210.h
components/LCD/: CMakeLists.txt  LCD.c  LCD.h  MRX.h  myGUI.c  myGUI.h
components/NetTime/: CMakeLists.txt  NetTime.c  NetTime.h
components/QMI8658/: CMakeLists.txt  QMI8658.c  QMI8658.h
components/SD/: CMakeLists.txt  SD.c  SD.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/ES7210/: cmake_install.cmake
esp-idf/LCD/: cmake_install.cmake
esp-idf/LVGL_porting/: cmake_install.cmake
esp-idf/QMI8658/: cmake_install.cmake
esp-idf/SD/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
esp-idf/esp_coex/: cmake_install.cmake
esp-idf/esp_common/: cmake_install.cmake
esp-idf/esp_eth/: cmake_install.cmake
esp-idf/esp_event/: cmake_install.cmake
esp-idf/esp_gdbstub/: cmake_install.cmake
esp-idf/esp_hid/: cmake_install.cmake
esp-idf/esp_lcd/: cmake_install.cmake
main/: idf_component.yml  main.c
(+110 files in other folders)
